@@ -1371,7 +1371,7 @@ this should be listed FIRST in your file.
 \fBNOTE:\fR The ".default." host entry will only accept the following
 tags - others are silently ignored: delayyellow, delayred, NOCOLUMNS, 
 COMMENT, DESCR, CLASS, dialup, testip, nonongreen, nodisp, noinfo, 
-notrends, TRENDS, NOPROPRED, NOPROPYELLOW, NOPROPPURPLE, NOPROPACK, 
+notrends, noclient, TRENDS, NOPROPRED, NOPROPYELLOW, NOPROPPURPLE, NOPROPACK, 
 REPORTTIME, WARNPCT, NET, noclear, nosslcert, ssldays, DOWNTIME, depends, 
 noping, noconn, trace, notrace, HIDEHTTP, browser, pulldata. Specifically, 
 note that network tests, "badTEST" settings, and alternate pageset 
