@@ -88,6 +88,9 @@ Value of the "nobb2" tag (deprecated, use NONONGREEN instead).
 .IP XMH_FLAG_NOCLEAR
 Value of the NOCLEAR tag.
 
+.IP XMH_FLAG_NOCLIENT
+Value of the "noclient" tag.
+
 .IP XMH_FLAG_NOCONN
 Value of the "noconn" tag.
 
