@@ -38,6 +38,7 @@ enum xmh_item_t {
 	XMH_DELAYYELLOW,
 	XMH_FLAG_NOINFO,
 	XMH_FLAG_NOTRENDS,
+	XMH_FLAG_NOCLIENT,
 	XMH_FLAG_NODISP,
 	XMH_FLAG_NONONGREEN,
 	XMH_FLAG_NOBB2,
