@@ -32,6 +32,11 @@ Changes from 4.3.19 -> 4.xx.yy (00 Apr 2015)
   (Thanks, Andy Smith)
 * The graphs to be displayed on a specific status page can be customized
   with environment variables - see xymonserver.cfg(5). From Werner Maier.
+* When clients are in "server" mode (sending raw data to the xymond server
+  to be centrally processed), a 'clientlog' column will now be shown on
+  xymon pages (similar to trends and info columns). This can be disabled on 
+  a per-host basis by adding a 'noclient' tag to the hosts.cfg line,
+  or globally by adding that to the .default. host.
 
 
 Changes from 4.3.18 -> 4.3.19 (30 Mar 2015)
